# Vision_robosub

./: .gitignore  AGENTS.md  README.md  color_sampler.py  image_batch.py  main.py  pyproject.toml
data/: color_classifier_gmm.joblib
src/: __init__.py  logging_config.py  loop.py  messages.py  processor.py  video.py
src/modules/: __init__.py  aruco_detector.py  base.py  frame_rate_logger.py  gmm_color_mask.py  image_enhancer.py  marker_rectifier.py  queue_fanout.py
tests/: test_color_sampler.py  test_processor.py
